fix(theme): fix code block on mobile

--- a/packages/theme/src/client/styles/code/base.scss
+++ b/packages/theme/src/client/styles/code/base.scss
@@ -141,3 +141,13 @@ div[class*="language-"] {
     }
   }
 }
+
+// narrow mobile
+@media (max-width: config.$mobileS) {
+  .theme-default-content {
+    div[class*="language-"] {
+      margin: 0.85rem -1.5rem;
+      border-radius: 0;
+    }
+  }
+}
